# scribe-ai

./: .env.example  .gitignore  Makefile  README.md  SUBMISSION_README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  run_server.py
backend/app/: main.py
backend/app/agent/: orchestrator.py  prompts.py  provider.py  tools.py  tools_mcp.py
backend/app/agent/tools/: __init__.py  calculator.py  tools.py  tools_mcp.py
backend/app/api/: chat.py  conversations.py  products.py  routes.py
backend/app/context/: __init__.py  assembler.py  models.py  router.py
backend/app/core/: bootstrap.py  config.py  database.py  loop.py  seed.py
backend/app/ingest/: __init__.py  build_embeddings.py  build_knowledge_map.py  build_toc.py  extract_chunks.py  jobs.py  ocr_vision.py  pipeline.py  render_pages.py  text_extraction.py
backend/app/knowledge/: evidence.py  full_context.py  structured.py
backend/app/knowledge/data/: feed_rollers.json  safety.json  specs.json  troubleshooting.json
backend/app/packs/: __init__.py  models.py  registry.py
backend/app/retrieval/: service.py
backend/app/session/: manager.py  models.py  summary.py
backend/app/validation/: service.py
backend/scripts/: SPIKE_RESULTS.md  debug_artifact.py  extract_chunks.py  render_pages.py  run_eval.py  seed_db.py  spike_agent_sdk.py  spike_agent_sdk_v2.py  spike_agent_sdk_v3.py  spike_agent_sdk_v4_streaming.py  test_live_agent.py
backend/tests/: test_chat_api.py  test_context_assembler.py  test_evidence.py  test_full_context.py  test_health.py  test_orchestrator.py  test_phase2_ground_truth.py  test_provider.py  test_retrieval.py  test_run_eval.py  test_session.py  test_session_summary.py  test_tools.py  test_tools_mcp.py
data/: local.db  local.db-shm  local.db-wal
data/document-packs/bench-tool-demo/: pack.yaml
data/document-packs/vulcan-omnipro-220/: eval_questions.yaml  pack.yaml
data/products/bench-tool-demo/: pack.yaml
docs/: ARCHITECTURE_STATUS.md  RETRIEVAL_ALGORITHM.md
docs/final/: FINAL_DESIGN.md  FINAL_PLAN.md
docs/specs/: 2026-04-12-chat-persistence-design.md  2026-04-12-chat-persistence-plan.md
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
scripts/: dev.sh  setup.sh
(+44 files in other folders)
