[project]
name = "prox-agent-backend"
version = "0.1.0"
description = "Multimodal reasoning agent for complex physical products"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pymupdf>=1.25.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "rank-bm25>=0.2.2",
    "Pillow>=11.0.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
vectors = [
    "sentence-transformers>=3.3.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
